; ModuleID = '/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_wireprotocol.c_php_mysqlnd_net_store_length_size.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_wireprotocol.c_php_mysqlnd_net_store_length_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @php_mysqlnd_net_store_length_size(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = call i64 @L64(i32 251)
  %6 = icmp slt i64 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i64 1, i64* %2, align 8
  br label %19

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = call i64 @L64(i32 65536)
  %11 = icmp slt i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %8
  store i64 3, i64* %2, align 8
  br label %19

13:                                               ; preds = %8
  %14 = load i64, i64* %3, align 8
  %15 = call i64 @L64(i32 16777216)
  %16 = icmp slt i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %13
  store i64 4, i64* %2, align 8
  br label %19

18:                                               ; preds = %13
  store i64 9, i64* %2, align 8
  br label %19

19:                                               ; preds = %18, %17, %12, %7
  %20 = load i64, i64* %2, align 8
  ret i64 %20
}

declare dso_local i64 @L64(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
